--- a/style.css
+++ b/style.css
@@ -476,6 +476,14 @@ a:hover, a:focus {
 @media screen and (max-width: 767px) {
   .lp-mv {
     align-items: flex-start;
+    padding-left: 40px;
+    padding-right: 40px;
+    box-sizing: border-box;
+  }
+}
+
+@media screen and (max-width: 428px) {
+  .lp-mv {
     padding-left: 20px;
     padding-right: 20px;
     box-sizing: border-box;
@@ -643,6 +651,14 @@ a:hover, a:focus {
 
 @media screen and (max-width: 767px) {
   .lp-winter {
+    padding-left: 40px;
+    padding-right: 40px;
+    box-sizing: border-box;
+  }
+}
+
+@media screen and (max-width: 428px) {
+  .lp-winter {
     padding-left: 20px;
     padding-right: 20px;
     box-sizing: border-box;
@@ -719,6 +735,14 @@ a:hover, a:focus {
 }
 
 @media screen and (max-width: 767px) {
+  .lp-spring {
+    padding-left: 40px;
+    padding-right: 40px;
+    box-sizing: border-box;
+  }
+}
+
+@media screen and (max-width: 428px) {
   .lp-spring {
     padding-left: 20px;
     padding-right: 20px;
@@ -804,8 +828,8 @@ a:hover, a:focus {
 @media screen and (max-width: 1024px) {
   .lp-catch__innerText {
     width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
     box-sizing: border-box;
   }
 }
@@ -814,6 +838,9 @@ a:hover, a:focus {
   .lp-catch__innerText {
     padding-top: 40px;
     padding-bottom: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
   }
 }
 
@@ -886,8 +913,8 @@ a:hover, a:focus {
 .lp-sales {
   min-height: 100vh;
   box-sizing: border-box;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
   box-sizing: border-box;
 }
 
@@ -902,6 +929,9 @@ a:hover, a:focus {
   .lp-sales {
     padding-top: 40px;
     padding-bottom: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
   }
 }
 
@@ -1002,9 +1032,17 @@ a:hover, a:focus {
   padding: 80px 0;
   box-sizing: border-box;
   position: relative;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
   box-sizing: border-box;
+}
+
+@media screen and (max-width: 428px) {
+  .lp-features {
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+  }
 }
 
 .lp-features__innerHead {
@@ -1135,7 +1173,7 @@ a:hover, a:focus {
 
 @media screen and (max-width: 1024px) {
   .lp-voice {
-    padding: 80px 40px;
+    padding: 80px;
   }
 }
 
@@ -1143,6 +1181,14 @@ a:hover, a:focus {
   .lp-voice {
     padding-top: 40px;
     padding-bottom: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
+    box-sizing: border-box;
+  }
+}
+
+@media screen and (max-width: 428px) {
+  .lp-voice {
     padding-left: 20px;
     padding-right: 20px;
     box-sizing: border-box;
@@ -1191,6 +1237,12 @@ a:hover, a:focus {
   width: calc((720 / 1920) * 100vw);
 }
 
+@media screen and (max-width: 1024px) {
+  .lp-voice__innerFlexBox {
+    width: calc(50% - 20px);
+  }
+}
+
 @media screen and (max-width: 767px) {
   .lp-voice__innerFlexBox {
     width: calc((600 / 767) * 100vw);
@@ -1230,10 +1282,25 @@ a:hover, a:focus {
   background: #FFE6E6;
   font-family: "游明朝", "YuMincho", "ヒラギノ明朝 Pro W3", "Hiragino Mincho Pro", "ＭＳ Ｐ明朝", "MS PMincho", serif;
   position: relative;
+  padding: 80px 0;
+  box-sizing: border-box;
 }
 
-.lp-shop__inner {
-  padding: 80px 0;
+@media screen and (max-width: 767px) {
+  .lp-shop {
+    padding: 80px;
+    padding-left: 40px;
+    padding-right: 40px;
+    box-sizing: border-box;
+  }
+}
+
+@media screen and (max-width: 428px) {
+  .lp-shop {
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+  }
 }
 
 .lp-shop__innerHeadImg {
@@ -1241,13 +1308,28 @@ a:hover, a:focus {
   margin: 0 auto 80px;
 }
 
+@media screen and (max-width: 428px) {
+  .lp-shop__innerHeadImg {
+    margin: 0 auto 40px;
+  }
+}
+
 .lp-shop__innerFlex {
   display: flex;
   max-width: 1520px;
-  width: calc((1520 / 1920) * 100vw);
+  width: 100%;
   text-align: center;
   margin: 0 auto;
   position: relative;
+  height: calc((700 / 1080) * 100vh);
+}
+
+@media screen and (max-width: 767px) {
+  .lp-shop__innerFlex {
+    flex-direction: column;
+    height: auto;
+    align-items: center;
+  }
 }
 
 .lp-shop__innerFlexStore {
@@ -1255,6 +1337,13 @@ a:hover, a:focus {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+@media screen and (max-width: 767px) {
+  .lp-shop__innerFlexStore {
+    margin-bottom: 64px;
+    width: 100%;
+  }
 }
 
 .lp-shop__innerFlexStore::after {
@@ -1269,9 +1358,31 @@ a:hover, a:focus {
   top: 0;
 }
 
+@media screen and (max-width: 767px) {
+  .lp-shop__innerFlexStore::after {
+    position: static;
+    width: 100%;
+    height: 2px;
+    margin-top: 64px;
+  }
+}
+
 .lp-shop__innerFlexStoreText {
   font-size: 28px;
   margin-bottom: 80px;
+}
+
+@media screen and (max-width: 767px) {
+  .lp-shop__innerFlexStoreText {
+    font-size: 24px;
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (max-width: 428px) {
+  .lp-shop__innerFlexStoreText {
+    font-size: 20px;
+  }
 }
 
 .lp-shop__innerFlexStore .sw-btn.store.pc {
@@ -1286,9 +1397,29 @@ a:hover, a:focus {
   justify-content: center;
 }
 
+@media screen and (max-width: 767px) {
+  .lp-shop__innerFlexOnline {
+    margin-bottom: 40px;
+    width: 100%;
+  }
+}
+
 .lp-shop__innerFlexOnlineText {
   font-size: 40px;
   margin-bottom: 80px;
+}
+
+@media screen and (max-width: 767px) {
+  .lp-shop__innerFlexOnlineText {
+    font-size: 28px;
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (max-width: 428px) {
+  .lp-shop__innerFlexOnlineText {
+    font-size: 24px;
+  }
 }
 
 .lp-shop__innerFlexOnline .sw-btn.buy.pc {
@@ -1304,7 +1435,13 @@ a:hover, a:focus {
   max-width: 313px;
   width: 16.30208vw;
   left: 20px;
-  top: 140px;
+  top: 100px;
+}
+
+@media screen and (max-width: 428px) {
+  .lp-shop__Sakura01 {
+    width: 20.8605vw;
+  }
 }
 
 .lp-shop__Sakura02 {
@@ -1312,4 +1449,10 @@ a:hover, a:focus {
   width: 13.54167vw;
   right: 20px;
   bottom: 20px;
+}
+
+@media screen and (max-width: 767px) {
+  .lp-shop__Sakura02 {
+    width: 19.55671vw;
+  }
 }
