--- a/style.css
+++ b/style.css
@@ -526,7 +526,14 @@ a:hover, a:focus {
 }
 
 .st-headerSpMenu {
-  display: none;
+  opacity: 0;
+  background: #FFE6E6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1001;
+  min-height: 100vh;
+  width: 100vw;
 }
 
 @media screen and (max-width: 768px) {
@@ -534,11 +541,14 @@ a:hover, a:focus {
     display: none;
   }
   .st-headerSpMenu.is-active {
+    animation: hamburger-open .5s ease;
     display: block;
+    opacity: 1;
   }
 }
 
 .st-headerSpMenuNav {
+  padding-top: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -548,10 +558,6 @@ a:hover, a:focus {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.st-headerSpMenuNavListItem {
-  margin-right: 40px;
 }
 
 .st-headerSpMenuNavListItemLink {
@@ -1541,9 +1547,6 @@ a:hover, a:focus {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-left: 40px;
-  padding-right: 40px;
-  box-sizing: border-box;
 }
 
 @media screen and (max-width: 768px) {
